# shivya

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: test.yml
crates/shivya-cli/: Cargo.toml
crates/shivya-cli/src/: bridge.rs  main.rs  orchestrator.rs
crates/shivya-flux/: Cargo.toml
crates/shivya-flux/benches/: convergence_vs_gossip.rs
crates/shivya-flux/src/: blanket.rs  lib.rs  model.rs
crates/shivya-flux/tests/: cognitive_loop_test.rs
crates/shivya-hodge/: Cargo.toml
crates/shivya-hodge/src/: complex.rs  lib.rs  operators.rs  reconciler.rs  solver.rs
crates/shivya-mind/: Cargo.toml
crates/shivya-mind/src/: ShivyaMindNative.kt  codebook.rs  ffi.rs  lib.rs  memory.rs  surprise.rs  vsa.rs
crates/shivya-mind/tests/: ffi_tests.rs  integration_tests.rs
crates/shivya-morphic/: Cargo.toml
crates/shivya-morphic/src/: autotelic.rs  lib.rs  metamorphic.rs
crates/shivya-morphic/src/vm/: ast.rs  compiler.rs  eval.rs  mod.rs
crates/shivya-onsager/: Cargo.toml
crates/shivya-onsager/src/: ensemble.rs  field.rs  harsanyi.rs  lib.rs
crates/shivya-p2p/: Cargo.toml
crates/shivya-p2p/src/: lib.rs  protocol.rs  routing.rs  transport.rs
crates/shivya-telemetry/: Cargo.toml
crates/shivya-telemetry/src/: lib.rs
crates/shivya-turing/: Cargo.toml
crates/shivya-turing/src/: apoptosis.rs  lib.rs  mitosis.rs  morphogen.rs
crates/telemetry_wasm/: Cargo.toml
crates/telemetry_wasm/src/: lib.rs
docs/: architecture.html  architecture.md  index.html  manifesto.html  manifesto.md  philosophy.html  philosophy.md
docs/mind/: android_jni.md  architecture.md  integration.md  philosophy.md
src/: lib.rs
tests/: chaos_ensemble.rs
web/: index.html
web/pkg/: telemetry_wasm.d.ts  telemetry_wasm.js  telemetry_wasm_bg.wasm  telemetry_wasm_bg.wasm.d.ts
