[package]
name = "shivya"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Consensus-free distributed resource-sharing mesh for edge fleets, pairing discrete exterior calculus with hierarchical active inference."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya"

[workspace]
resolver = "2"
members = [
    "crates/shivya-hodge",
    "crates/shivya-flux",
    "crates/shivya-telemetry",
    "crates/shivya-morphic",
    "crates/shivya-onsager",
    "crates/shivya-turing",
    "crates/shivya-cli",
    "crates/shivya-p2p",
    "crates/shivya-mind"
]

[dependencies]
shivya-hodge = { version = "0.4.0", path = "crates/shivya-hodge" }
shivya-flux = { version = "0.4.0", path = "crates/shivya-flux" }
shivya-morphic = { version = "0.4.0", path = "crates/shivya-morphic" }
shivya-onsager = { version = "0.4.0", path = "crates/shivya-onsager" }
shivya-turing = { version = "0.4.0", path = "crates/shivya-turing" }

[dev-dependencies]
shivya-p2p = { version = "0.4.0", path = "crates/shivya-p2p" }
tokio = { version = "1.0", features = ["full"] }
