[package]
name = "shivya"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Consensus-free distributed edge-flow runtime: localized active-inference load balancing with eventual curl-free convergence over a simplicial state complex."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya"

[workspace]
resolver = "2"
members = [
    "crates/shivya-hodge",
    "crates/shivya-flux",
    "crates/shivya-telemetry",
    "crates/shivya-morphic",
    "crates/shivya-onsager",
    "crates/shivya-turing",
    "crates/shivya-cli",
    "crates/shivya-p2p",
    "crates/shivya-mind"
]

# Workspace-wide clippy policy. We treat all warnings as deny in CI
# (`cargo clippy --workspace --all-targets -- -D warnings`) but allow a
# small handful of lints that consistently mis-fire on tight numerical
# code: parallel-indexed array iteration reads better than chained
# enumerate(), `&Vec<f64>` is the established signature shape through
# the math crates, and several mathematical constructor functions
# legitimately take a high arity.
[workspace.lints.clippy]
needless_range_loop = "allow"
ptr_arg = "allow"
too_many_arguments = "allow"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "crates/shivya-hodge" }
shivya-flux = { version = "0.4.0", path = "crates/shivya-flux" }
shivya-morphic = { version = "0.4.0", path = "crates/shivya-morphic" }
shivya-onsager = { version = "0.4.0", path = "crates/shivya-onsager" }
shivya-turing = { version = "0.4.0", path = "crates/shivya-turing" }

[dev-dependencies]
shivya-p2p = { version = "0.4.0", path = "crates/shivya-p2p" }
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
