[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shivya"
version = "0.1.0"
description = "SHIVYA: The Non-Dual Substrate (NDS) - Layer 0 HodgeMesh Engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["distributed-ledger", "hodge-decomposition", "geometric-reconciliation", "consensus-free", "simplicial-complex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]


[tool.setuptools.packages.find]
include = ["shivya*"]
exclude = ["tests*", "examples*", "docs*"]
