[package]
name = "shivya-flux"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Consensus-free distributed resource-sharing mesh for edge fleets, pairing discrete exterior calculus with hierarchical active inference."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-flux"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "../shivya-hodge" }
shivya-mind = { version = "0.4.0", path = "../shivya-mind" }
