[package]
name = "shivya-flux"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 1 of Shivya: Gaussian active-inference agent driving localized load-balancing decisions by variational free-energy minimisation, ridge-regularised on the math path."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-flux"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "../shivya-hodge" }
shivya-mind = { version = "0.4.0", path = "../shivya-mind" }

[[bench]]
name = "convergence_vs_gossip"
harness = false
