[package]
name = "shivya-hodge"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 0 of Shivya: discrete exterior calculus operators (d0, d1) and a Hodge curl projector over a simplicial state complex, enabling eventual curl-free convergence after partition heal."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-hodge"

[dependencies]
# Zero dependencies for Layer 0
