[package]
name = "shivya-morphic"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 2 of Shivya: deterministic register-IR interpreter with a hard 500-cycle budget plus an offline 1+1 mutation hill-climber over symbolic update laws."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-morphic"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "../shivya-hodge" }
shivya-flux = { version = "0.4.0", path = "../shivya-flux" }
