[package]
name = "shivya-onsager"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A first-principles non-dual distributed computing substrate pairing discrete exterior calculus with hierarchical active inference."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-onsager"

[dependencies]
shivya-hodge = { version = "0.1.0", path = "../shivya-hodge" }
shivya-flux = { version = "0.1.0", path = "../shivya-flux" }
shivya-morphic = { version = "0.1.0", path = "../shivya-morphic" }
