[package]
name = "shivya-onsager"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 3 of Shivya: multi-agent active-inference ensemble with a symmetric Onsager flow matrix (L_ij = L_ji) and Harsanyi-dividend collective free energy."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-onsager"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "../shivya-hodge" }
shivya-flux = { version = "0.4.0", path = "../shivya-flux" }
shivya-morphic = { version = "0.4.0", path = "../shivya-morphic" }
