[package]
name = "shivya-turing"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 4 of Shivya: graph-Laplacian Gierer-Meinhardt reaction-diffusion with RK4 + CFL bound; pre-allocated mitosis pool and apoptosis floor for topology adaptation."
keywords = ["active-inference", "exterior-calculus", "distributed-systems", "wasm", "morphogenesis"]
homepage = "https://github.com/jvoltci/shivya"
repository = "https://github.com/jvoltci/shivya"
documentation = "https://docs.rs/shivya-turing"

[dependencies]
shivya-hodge = { version = "0.4.0", path = "../shivya-hodge" }
shivya-flux = { version = "0.4.0", path = "../shivya-flux" }
shivya-morphic = { version = "0.4.0", path = "../shivya-morphic" }
shivya-onsager = { version = "0.4.0", path = "../shivya-onsager" }
