[package]
name = "telemetry_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shivya-hodge = { path = "../shivya-hodge" }
shivya-flux = { path = "../shivya-flux" }
shivya-morphic = { path = "../shivya-morphic" }
shivya-onsager = { path = "../shivya-onsager" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
